[package]
name        = "xstream"
description = "Public key encryption system combining X25519 Diffie-Hellman with the STREAM construction"
version     = "0.0.0"
license     = "MIT"
authors     = ["Tony Arcieri <bascule@gmail.com>"]
homepage    = "https://miscreant.io"
repository  = "https://github.com/miscreant/xstream"
readme      = "README.md"
categories  = ["cryptography"]
keywords    = ["cryptography", "encryption", "security"]

[dependencies]
clear_on_drop = { version = "0.2", features = ["nightly"] }
digest = "0.7"
generic-array = "0.9"
hkdf = "0.3"
miscreant = "0.2"
rand = "0.3"
sha2 = "0.7"
x25519-dalek = "0.1"

[dev-dependencies]
data-encoding = "2.0"
serde_json = "1"

[patch.crates-io.miscreant]
git = "https://github.com/miscreant/miscreant.git"
